@@ -3,10 +3,9 @@ Categories=Application;Network;
 Encoding=UTF-8
 Name=PCManX
 Exec=pcmanx
-Icon=pcmanx
+Icon=@prefix@/share/pixmaps/pcmanx.png
 Type=Application
 Terminal=false
-Icon=@prefix@/share/pixmaps/pcmanx.png
 GenericName=PCMan X BBS Client
 GenericName[zh_TW]=PCMan X BBS 連線軟體
 GenericName[zh_CN]=PCMan X BBS 连线软件
